--- a/about.html
+++ b/about.html
@@ -3,5 +3,36 @@
 <head>
 </head>
 <body>
+  <!-- *** Below is the About Page Content *** -->
+<header id="about">
+  <a href="#index.html" id="logo">
+    <h1>Yasmine Fahmy</h1>
+    <h2>Students</h2>
+  </a>
+  <nav>
+    <ul>
+      <li><a href="#index.html">Portfolio</a></li>
+      <li><a href="#about.html" class="selected">About</a></li>
+      <li><a href="#contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+<div id="wrapper">
+  <section>
+    <img src="">
+    <h3>About</h3>
+    <p>Hi, I'm Yasmine Fahmy I love photogrphy and I love taking picture of nature and I aslo like visting diffrent places and explore our beautiful world .</p>
+    <p>If you'd like to follow me on Twitter, my username is <a href="http://twitter.com/jrsmotox">@jrsmotox</a>.</p>
+  </section>
+  <footer>
+    <a href="http://twitter.com">
+      <img src="https://webucation.github.io/css-challenge-5/img/twitter-wrap.png" alt="Twitter Logo" class="social-icon">
+    </a>
+    <a href="http://facebook.com">
+      <img src="https://webucation.github.io/css-challenge-5/img/facebook-wrap.png" alt="Facebook Logo" class="social-icon">
+    </a>
+    <p>&copy; 2017 Yasmine Fahmy</p>
+  </footer>
+</div>
 </body>
 </html>
