--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,43 @@
-
+<!DOCTYPE html >
+<html>
+<head>
+</head>
+<body>
+<!-- *** Below is the Contact Page *** -->
+<header id="contact">
+  <a href="#portfolio" id="logo">
+    <h1>Yasmine Fahmy</h1>
+    <h2>Student</h2>
+  </a>
+  <nav>
+    <ul>
+      <li><a href="#index.html">Portfolio</a></li>
+      <li><a href="">About</a></li>
+      <li><a href="#contact" class="selected">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+<div id="wrapper">
+  <section id="primary">
+    <h3>General Information</h3>
+    <p>I am not currently looking for new design work, but I am available for speaking gigs and similar engagements. If you have any questions, please don't hesitate to contact me!</p>
+    <p>Please only use phone contact for urgent inquiries. Otherwise, Twitter and email are the best way to reach me.</p>
+  </section>
+  <section id="secondary">
+    <h3>Contact Details</h3>
+    <ul class="contact-info">
+      <li class="phone"><a href="tel:555-6425">555-6425</a></li>
+      <li class="mail"><a href="mailto:justin@example.com">justin@example.com</a></li>
+      <li class="twitter"><a href="http://twitter.com/intent/tweet?screen_name=jrsmotox">@jrsmotox</a></li>
+    </ul>
+  </section>
+  <footer>
+    <a href="http://twitter.com">
+      <img src="https://webucation.github.io/css-challenge-5/img/twitter-wrap.png" alt="Twitter Logo" class="social-icon">
+    </a>
+    <a href="http://facebook.com">
+      <img src="https://webucation.github.io/css-challenge-5/img/facebook-wrap.png" alt="Facebook Logo" class="social-icon">
+    </a>
+    <p>&copy; 2017 Yasmine Fahmy</p>
+  </footer>
+</div>
